<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make" />

    <EditText
        android:id="@+id/make_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/make_demo" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <EditText
        android:id="@+id/model_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/model_demo" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <EditText
        android:id="@+id/color_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/color_demo" />

    <Switch
        android:id="@+id/maseter_car_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Czy to twoje główne auto"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        style="@style/CommonSwitch"
        />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CommonButton"
        android:text="@string/confirm">

    </Button>

</LinearLayout>
</LinearLayout>